--- a/moomood/Base.lproj/Main.storyboard
+++ b/moomood/Base.lproj/Main.storyboard
@@ -182,7 +182,7 @@
                                 <rect key="frame" x="129" y="64" width="116" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
-                                    <fragment content="Journal">
+                                    <fragment content="History">
                                         <attributes>
                                             <color key="NSColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                             <font key="NSFont" size="28" name="AvenirNext-UltraLight"/>
